Fix spacing and alignment

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,8 @@ body {
   font-size: 3em;
 }
 .text-content {
+  width: 60%;
+  height: auto;
   margin: auto;
 }
 h1 {
@@ -45,32 +47,43 @@ p {
   display: flex;
   border: 3px solid palevioletred;
   border-radius: 15px;
-  width: 700px;
-  height: auto;
+  width: 90%;
+  height: 120px;
   margin: auto;
   padding: 10px;
 }
 .section h1 {
   font-family: 'Amatic SC', cursive;
-  font-size: 5em;
+  font-size: 4em;
+  margin: auto auto auto 10px;
 }
-.fs-container {
+.section p {
+  font-size: 1em;
+}
+.fs-container, .lsu-container {
   flex: 1;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  padding: 10px;
 }
 .fs-img {
   width: 100%;
   height: auto;
-}
-.lsu-container {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
+  margin: auto;
 }
 .lsu-img {
-  width: 80%;
+  width: 70%;
   height: auto;
+  margin: auto;
+}
+.education, .skills, .projects {
+  display: flex;
+  margin: auto;
+  width: 100%;
+  justify-content: space-between;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 .devicon-css3-plain-wordmark, .devicon-html5-plain-wordmark, .devicon-javascript-plain, .devicon-react-original-wordmark, .devicon-ruby-plain-wordmark {
   font-size: 6em;
